--- a/Languages/English/Keyed/Misc_Gameplay.xml
+++ b/Languages/English/Keyed/Misc_Gameplay.xml
@@ -19,7 +19,9 @@
 	<VRE_CommandDraincasketEjectDesc>Eject occupant from this draincasket. This will interrupt the hemogen extraction and leave the occupant dizzy due to the bloodloss.</VRE_CommandDraincasketEjectDesc>
 	<VRE_CommandDraincasketEjectFailEmpty>Can't eject occupant, since draincasket is empty</VRE_CommandDraincasketEjectFailEmpty>
 	<VRE_DraincasketAmount>Draincasket hemogen production (per day)</VRE_DraincasketAmount>
-	<VRE_DraincasketAmountTooltip>Sets the amount of hemogen packs the draincaskets will produce per day. By default it is 2 hemogen packs per day.</VRE_DraincasketAmountTooltip>
+	<VRE_DraincasketAmountTooltip>Sets the amount of hemogen packs the draincaskets will produce per day. By default, it is 2 hemogen packs per day.</VRE_DraincasketAmountTooltip>
 	<VRE_Reset>Reset</VRE_Reset>
 	<VRE_NoAnomalies>Cannot be used on Revenant or Nociospheres</VRE_NoAnomalies>
+	<VRE_DraincasketAmountFromMetabolism>Daily hemogen production: {0} packs</VRE_DraincasketAmountFromMetabolism>
+	<VRE_DraincasketOccupantDying>Occupant dying from starvation in {0}</VRE_DraincasketOccupantDying>
 </LanguageData>
