More Draincasket updates
- Nutrient paste network will refuel draincasket when someone is queued to enter (and not just is inside)
- Pawn inside a drarincasket exposed to vacuum will take vacuum burn damage and suffer from vacuum exposure

--- a/Languages/English/Keyed/Misc_Gameplay.xml
+++ b/Languages/English/Keyed/Misc_Gameplay.xml
@@ -24,4 +24,5 @@
 	<VRE_NoAnomalies>Cannot be used on Revenant or Nociospheres</VRE_NoAnomalies>
 	<VRE_DraincasketAmountFromMetabolism>Daily hemogen production: {0} packs</VRE_DraincasketAmountFromMetabolism>
 	<VRE_DraincasketOccupantDying>Occupant dying from starvation in {0}</VRE_DraincasketOccupantDying>
+	<VRE_DraincasketInVacuum_OccupantDying>Occupant dying from vacuum exposure</VRE_DraincasketInVacuum_OccupantDying>
 </LanguageData>
